--- a/package.json
+++ b/package.json
@@ -17,25 +17,27 @@
     "format:fix": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
     "codegen": "graphql-codegen --require dotenv/config --config codegen.ts",
     "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "cy:run:component": "cypress run --component"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.21.2",
+    "@contentful/rich-text-react-renderer": "^15.22.11",
     "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.5",
+    "framer-motion": "^11.5.6",
     "graphql": "^16.9.0",
     "graphql-request": "^6.1.0",
-    "neverthrow": "^7.0.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-select": "^5.8.0",
+    "neverthrow": "^7.2.0",
+    "next": "^14.2.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.2",
+    "react-select": "^5.8.1",
     "react-use": "^17.5.1",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
-    "zod-validation-error": "^3.3.1"
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
@@ -44,26 +46,26 @@
     "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@graphql-codegen/typescript-operations": "^4.2.3",
     "@testing-library/cypress": "^10.0.2",
-    "@testing-library/jest-dom": "^6.4.8",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@types/node": "^20.16.5",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
-    "cf-content-types-generator": "^2.15.2",
-    "cypress": "^13.13.3",
+    "cf-content-types-generator": "^2.15.5",
+    "cypress": "^13.14.2",
     "dotenv-cli": "^7.4.2",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "expose-env": "^0.1.7",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2"
   }
 }
