--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ env:
   CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
   CONTENTFUL_CODEGEN_TOKEN: ${{ secrets.CONTENTFUL_CODEGEN_TOKEN }}
   CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
-  NEXT_PUBLIC_API_MOCKING: false
+  NEXT_PUBLIC_API_MOCKING: true
 
 jobs:
   install-and-build:
@@ -43,11 +43,14 @@ jobs:
       - name: Build project 👷‍♀️
         run: npm run build
 
+      - name: List .next directory contents
+        run: ls -la .next
+
       - name: Upload build artifacts 🏺
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: .next
+          path: .next/**/*
           if-no-files-found: error
 
   run-tests:
