--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: ${{ github.workspace }}/.next/**/*
+          path: .next
+          include-hidden-files: true
           if-no-files-found: error
 
   run-tests:
