--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@mocks/*": ["mocks/*"],
       "@services/*": ["services/*"],
       "@typings/*": ["typings/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@lib/*": ["lib/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
