remove Contentful and GraphQL

--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-#contetful
-contentful/export.json
-src/types/contentful/generated-types
-
-# graphql
-*.schema.json
-src/services/contentful/generated-types.ts
-
+# prisma
 /src/generated/prisma
