--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email": "kuba.wolak@gmail.com"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -28,12 +28,12 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.79.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^12.23.24",
     "neverthrow": "^8.0.0",
-    "next": "^14.2.15",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-joyride": "^2.9.2",
+    "next": "^15.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-joyride-react19-compat": "^2.9.5-react19-compat",
     "react-select": "^5.8.1",
     "react-use": "^17.5.1",
     "sharp": "^0.33.5",
@@ -44,16 +44,16 @@
   "devDependencies": {
     "@testing-library/cypress": "^10.0.2",
     "@testing-library/jest-dom": "^6.6.1",
-    "@types/node": "^20.16.12",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.19.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.15.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.15",
+    "eslint-config-next": "^15.5.6",
     "eslint-config-prettier": "^9.1.0",
     "expose-env": "^0.1.7",
     "msw": "^2.4.11",
