--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-select": "^5.8.1",
     "react-use": "^17.5.1",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
