--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@supabase/supabase-js": "^2.79.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
-    "neverthrow": "^8.0.0",
     "next": "^15.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -39,8 +38,7 @@
     "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8",
-    "zod-validation-error": "^3.4.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@testing-library/cypress": "^10.0.2",
