--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/cypress": "^10.0.2",
     "@testing-library/jest-dom": "^6.6.1",
     "@types/node": "^22.19.0",
@@ -48,7 +49,6 @@
     "@types/react-dom": "^19.2.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "autoprefixer": "^10.4.20",
     "cypress": "^13.15.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.1",
@@ -59,10 +59,10 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "prisma": "^6.18.0",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.6.3"
   },
   "msw": {
