upgrade next 15 -> 16, eslint 8 -> 9

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "type-check": "tsc --pretty --noEmit",
     "format:check": "prettier --check './src/**/*.{ts,tsx,js,jsx}'",
     "format:fix": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
@@ -29,31 +30,31 @@
     "@supabase/supabase-js": "^2.79.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
-    "next": "^15.5.6",
+    "next": "^16.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-joyride-react19-compat": "^2.9.5-react19-compat",
     "react-select": "^5.8.1",
     "react-use": "^17.5.1",
-    "sharp": "^0.33.5",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6",
     "usehooks-ts": "^3.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/cypress": "^10.0.2",
     "@testing-library/jest-dom": "^6.6.1",
     "@types/node": "^22.19.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
     "cypress": "^13.15.0",
     "dotenv-cli": "^7.4.2",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^15.5.6",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.1",
+    "eslint-config-prettier": "^10.1.8",
     "expose-env": "^0.1.7",
     "msw": "^2.4.11",
     "npm-run-all": "^4.1.5",
