--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@prisma/client": "^6.18.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.79.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "next": "^16.0.1",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-joyride-react19-compat": "^2.9.5-react19-compat",
@@ -38,6 +40,7 @@
     "react-use": "^17.5.1",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
+    "tailwind-merge": "^3.4.0",
     "usehooks-ts": "^3.1.0",
     "zod": "^4.1.12"
   },
