--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "type-check": "tsc --pretty --noEmit",
     "format:check": "prettier --check './src/**/*.{ts,tsx,js,jsx}'",
     "format:fix": "prettier --write './src/**/*.{ts,tsx,js,jsx}'",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run --browser chrome",
-    "cy:run:component": "cypress run --component",
     "db:pull": "prisma db pull",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:component": "playwright test -c playwright-ct.config.ts",
+    "test:component:ui": "playwright test -c playwright-ct.config.ts --ui"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -49,19 +50,18 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
+    "@playwright/experimental-ct-react": "^1.57.0",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.17",
-    "@testing-library/cypress": "^10.1.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@types/node": "^22.19.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "cypress": "^13.17.0",
     "dotenv-cli": "^7.4.4",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.4",
     "eslint-config-prettier": "^10.1.8",
     "expose-env": "^0.1.7",
-    "msw": "^2.12.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
