--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "name": "next"
       }
     ],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
