--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-infinite-scroll-hook": "^6.0.1",
     "react-joyride-react19-compat": "^2.9.5-react19-compat",
     "react-use": "^17.6.0",
     "sharp": "^0.34.5",
